@@ -239,9 +239,6 @@ Actions and undo/redo
 CommandInterpreter
 ------------------
 
-	[ ]  list-components should include the "description" of each
-	     component.
-
 	[/]  Tab completion for everything:
 		[X]  command names
 		[X]  component names
@@ -602,8 +599,6 @@ Preparation for release 0.5.0
 		   customized distributions of gxemul (by naming the directory
 		   gxemul-MyVer-1.2.3 etc, and supplying all source code). +
 		   SECONDARY_MSG in misc.h.
-		x) Links from component names in the template machine tree
-		   dumps, so that e.g. "mips_cpu0" links to mips_cpu?
 		x) Automated build of list of CommandInterpreter Commands + long
 		   description as HTML?
 		x) User guide with screenshots of the new GUI, _BUT_ the
