@@ -30,7 +30,7 @@ Available components:
 <tr bgcolor=#e0e0e0>
  <td valign=top><a href="components/component_dummy.html"><tt>dummy</tt></a></td>
  <td valign=top>stable</td>
- <td valign=top>A dummy component, which does nothing.<br>It can act as a container for other components.</td>
+ <td valign=top>A dummy component, which does nothing.</td>
  <td valign=top></td>
 </tr>
 <tr>
@@ -46,7 +46,7 @@ Available components:
 <tr bgcolor=#e0e0e0>
  <td valign=top><tt>machine</tt></td>
  <td valign=top>stable</td>
- <td valign=top>A generic component which acts as a base component for all machines.</td>
+ <td valign=top>A generic machine container.</td>
  <td valign=top></td>
 </tr>
 <tr>
