@@ -34,7 +34,7 @@ Available template machines:
   \-- mainbus0
       |-- ram0  (32 MB at offset 0)
       |-- rom0  (16 MB at offset 0x1fc00000)
-      \-- cpu0  (MIPS, 100 MHz)
+      \-- <a href="components/component_mips_cpu.html">cpu0</a>  (MIPS, 100 MHz)
 </pre></td>
  <td valign=top></td>
 </tr>
